fix viewport jumping around when closing tutorial modal by using javascript, keeping css solution as a fallback

--- a/tiroyal/client/tutorialmodal.css
+++ b/tiroyal/client/tutorialmodal.css
@@ -98,6 +98,11 @@ when users will click/enter button(link) browser will add a #id in a url and whe
   display: flex;
 }
 
+/*Added or removed with Javascript*/
+.show{
+  display: flex;
+}
+
 .modal {
   width: 50rem;
   padding: 0 2rem 4rem 2rem;
